<resources>
    <string name="app_name">coconote</string>
    <string name="logo">logo</string>
    <string name="coconote">Coconote</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <!-- Strings related to login -->
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email</string>
    <string name="upload_avatar">Upload Avatar</string>
    <string name="upload_icon">upload icon</string>
    <string name="expendicon">ExpendIcon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_notes">My Notes</string>
    <string name="calendar">Calendar</string>
    <string name="my_account">My Account</string>
    <string name="trash">Trash</string>
    <string name="sign_out">Sign Out</string>
    <string name="search">Search</string>
    <string name="search_icon">search icon</string>
    <string name="plus_new">+ New</string>
    <string name="add_tag">add tag</string>
    <string name="delete_note">delete note</string>
    <string name="edit_note">edit note</string>
    <string name="description_example">To do list:\nMe: 1. design the interface and conduct user experiments by Tuesday.</string>
    <string name="note_title_example">Course 233 discussion</string>
    <string name="date_sample">3.21 Tuesday</string>
    <string name="tag_sample">Course</string>
    <string name="new_tag">New tag</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="sample_time">2024-06-11 12:30:00</string>
    <string name="signature">signature</string>
</resources>