<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/email_input"
        android:layout_width="239dp"
        android:layout_height="68dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/input_background"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_input"
        app:layout_constraintVertical_bias="0.084"
        android:autofillHints="" />

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/theme"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/password_input"
        app:layout_constraintHorizontal_bias="0.575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.568" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="239dp"
        android:layout_height="68dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/input_background"
        android:hint="@string/password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_input"
        app:layout_constraintVertical_bias="0.061"
        android:autofillHints=""
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/username_input"
        android:layout_width="239dp"
        android:layout_height="68dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/input_background"
        android:hint="@string/username"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.462"
        android:autofillHints="hint"
        android:inputType="text" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="@color/theme"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/username_input"
        app:layout_constraintHorizontal_bias="0.612"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.463" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="241dp"
        android:layout_height="242dp"
        android:contentDescription="@string/coconote"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.157"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/theme"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/email_input"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.677" />

    <Button
        android:id="@+id/register"
        android:layout_width="203dp"
        android:layout_height="67dp"
        android:background="@drawable/login_btn_bg"
        android:text="@string/register"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:onClick="register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.889" />

    <LinearLayout
        android:layout_width="231dp"
        android:layout_height="77dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:onClick="uploadAvatar"
        app:layout_constraintBottom_toTopOf="@+id/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_input">

        <TextView
            android:id="@+id/upload_str"
            android:layout_width="16dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/upload_avatar"
            android:textColor="@color/theme"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/upload_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:contentDescription="@string/upload_icon"
            android:onClick="uploadAvatar"
            app:srcCompat="@drawable/upload" />

    </LinearLayout>

    <ImageView
        android:id="@+id/avatar_img"
        android:layout_width="82dp"
        android:layout_height="82dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.573"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.583"
        tools:srcCompat="@tools:sample/avatars" />

</androidx.constraintlayout.widget.ConstraintLayout>